--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Palyalumni</title>
+  <title>Paly Alumni & Friends</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <%= render :partial => "layouts/facebook_js" %>
+  <%= render :partial => "layouts/google_analytics_js" %>
+  <%= render :partial => "layouts/site_header" %>
+  <%= render :partial => "layouts/flash_bar" %>
+  <div class="content-yield">
+		<%= yield %>
+  </div>
 </body>
 </html>
