--- a/app/views/users/_social_link.html.erb
+++ b/app/views/users/_social_link.html.erb
@@ -1,1 +1,1 @@
-<%= link_to identity.display_name, identity.url, {:class => "social-link"} %>
+<%= link_to identity.display_name, identity.display_url, {:class => "social-link"} %>
