--- a/app/views/layouts/_site_header.html.erb
+++ b/app/views/layouts/_site_header.html.erb
@@ -9,7 +9,7 @@
 	<div style="float:right;">
 		<% if user_signed_in? %>
 		  Logged in as <strong><%= current_user.display_name %></strong>.
-		  <%= link_to 'Profile', users_profile_path(current_user), :class => 'navbar-link' %> |
+		  <%= link_to 'Profile', users_profile_path, :class => 'navbar-link' %> |
 		  <%= link_to "Settings", edit_user_registration_path, :class => 'navbar-link' %> |
 		  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 		<% else %>
