--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <%= render :partial => "layouts/google_analytics_js" %>
   <%= render :partial => "layouts/site_header" %>
   <%= render :partial => "layouts/flash_bar" %>
+  <h1>Paly Alumni Test Header</h1>
   <div class="content-yield">
 		<%= yield %>
   </div>
