--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,12 +18,6 @@
     
 	<!--asdf;aksljf;alksjf;aklsfjdks-->
 	<div class="top-bar">
-	  <div class="top-bar-title">
-	    <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-	      <button class="menu-icon dark" type="button" data-toggle></button>
-	    </span>
-	    <strong>Paly Alumni</strong>
-	  </div>
 	  <div id="responsive-menu">
 	    <div class="top-bar-left">
 	      <ul class="dropdown menu" data-dropdown-menu>
@@ -31,13 +25,13 @@
 		<li>
 		  <a href="#">About</a>
 		  <ul class="menu vertical">
-		    <li><a href="#">One</a></li>
-		    <li><a href="#">Two</a></li>
-		    <li><a href="#">Three</a></li>
+		    <li><a href="#">Paly Update</a></li>
+		    <li><a href="#">Construction</a></li>
 		  </ul>
 		</li>
-		<li><a href="#">Contact Us</a></li>
 		<li><a href="#">Reunions</a></li>
+		<li><a href="#">Donate</a></li>
+		<li><a href="#">Contact Us</a></li>
 	      </ul>
 	    </div>
 	  </div>
