added a footer that i'll format later lol

--- a/app/assets/stylesheets/foundation/foundation.css
+++ b/app/assets/stylesheets/foundation/foundation.css
@@ -17,13 +17,68 @@ html {
   -ms-text-size-adjust: 100%;
   /* 2 */
   -webkit-text-size-adjust: 100%;
-  /* 2 */ }
+  /* 2 */
+
+}
 
 /**
    * Remove default margin.
    */
 body {
-  margin: 0; }
+    margin: 0;
+    background-color: white;
+}
+/*
+Footer stuff added below
+*/
+.full-width {
+    max-width: 1400px;
+}
+
+.footer {
+    background-color: #black;
+    padding: 2rem 4rem;
+    text-align: center;
+    color: #fff;
+}
+.footer i {
+    font-size: 100px;
+}
+
+.footer h4 {
+    color: #fff;
+    font-size: 1em;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin-top: 2.5rem;
+    margin-bottom: 10px;
+}
+.footer p, .footer a {
+    font-weight: 300;
+    font-size: .8em;
+    color: #fff;
+}
+
+@media only screen and (min-width: 40.063em) {
+    .footer .columns:nth-child(n+2) {
+	border-left: 1px solid #b3b3b3;
+	min-height: 280px;
+    }
+}
+.footer-links {
+    list-style-type: none;
+}
+.footer-links li {
+    margin-top: .5em;
+}
+
+/* Footer stuff ends
+*/
+
+
+
+
+
 
 /* HTML5 display definitions
      ========================================================================== */
