--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,17 +21,17 @@
 	  <div id="responsive-menu">
 	    <div class="top-bar-left">
 	      <ul class="dropdown menu" data-dropdown-menu>
-		<li><a href="#">Home</a></li>
+		<li><a href="/">Home</a></li>
 		<li>
-		  <a href="#">About</a>
+		  <a href="/about-us">About</a>
 		  <ul class="menu vertical">
-		    <li><a href="#">Paly Update</a></li>
-		    <li><a href="#">Construction</a></li>
+		    <li><a href="/about-us/paly-update">Paly Update</a></li>
+		    <li><a href="/about-us/construction">Construction</a></li>
 		  </ul>
 		</li>
-		<li><a href="#">Reunions</a></li>
-		<li><a href="#">Donate</a></li>
-		<li><a href="#">Contact Us</a></li>
+		<li><a href="/reunions">Reunions</a></li>
+		<li><a href="/donate">Donate</a></li>
+		<li><a href="/contact-us">Contact Us</a></li>
 	      </ul>
 	    </div>
 	  </div>
