--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
-	background: #085608;
-	color:#FFF; 
+	background: #white;
+	color:black; 
 	font-family: Arial;
 	font-size: 16px;
 	padding:0px;
@@ -82,4 +82,57 @@ body {
 			padding-top:10px;
 		}
 	}
+//footer stuff
+	 .full-width {
+  	 max-width: 1400px;
+  	 }
+
+  	 $text-color: #fff;
+
+  // footer CSS
+
+     .footer {
+     	     background-color: black;
+	     padding: 2rem 4rem;
+      	     text-align: center;
+	     color: $text-color;
+	     i {
+			font-size: 100px;
+		  	}
+		}
+		.footer {
+		    	h4 {
+		           color: $text-color;
+			   font-size: 1em;
+			   font-weight: 400;
+			   text-transform: uppercase;
+			   margin-top: 2.5rem;
+			   margin-bottom: 10px;
+			   }
+					        p, a {
+						    font-weight: 300;
+						        font-size: .8em;
+							    color: $text-color;
+							      }
+							      }
+
+							      @media only screen and (min-width: 40.063em) {
+							      .footer {
+							        .columns:nth-child(n+2) {
+								    border-left: 1px solid scale-color($text-color, $lightness: -30%);
+								        min-height: 280px;
+									  }
+									   }
+									   }
+
+									   .footer-links {
+									     list-style-type: none;
+									       li {
+									           margin-top: .5em;
+										     }
+										     }
+
+
+	
 }
+
