--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,9 +37,52 @@
 	  </div>
 	  </div>
   </div>
+
+
+  
   <div class="content-yield">
 		<%= yield %>
   </div>
+
+    <!--Footer stuff below-->
+  <!-- For Foundation Icons, put this in your head -->
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="row full-width">
+      <div class="small-12 medium-3 large-4 columns">
+	<!--<i class="fi-laptop"></i>-->
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum maiores alias ea sunt facilis impedit fuga dignissimos illo quaerat iure in nobis id quos, eaque nostrum! Unde, voluptates suscipit repudiandae!</p>
+      </div>
+      <div class="small-12 medium-3 large-4 columns">
+	<!--<i class="fi-html5"></i>-->
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit impedit consequuntur at! Amet sed itaque nostrum, distinctio eveniet odio, id ipsam fuga quam minima cumque nobis veniam voluptates deserunt!</p>
+      </div>
+      <div class="small-6 medium-3 large-2 columns">
+	<h4>Work With Us</h4>
+	<ul class="footer-links">
+	  <li><a href="#">What We Do</a></li>
+	  <li><a href="#">Pricing</a></li>
+	  <li><a href="#">Events</a></li>
+	  <li><a href="#">Blog</a></li>
+	  <li><a href="#">FAQ's</a></li>
+	  <ul>
+      </div>
+      <div class="small-6 medium-3 large-2 columns">
+	<h4>Follow Us</h4>
+	<ul class="footer-links">
+	  <li><a href="#">GitHub</a></li>
+	  <li><a href="#">Facebook</a></li>
+	  <li><a href="#">Twitter</a></li>
+	  <li><a href="#">Instagram</a></li>
+	  <li><a href="#">Dribbble</a></li>
+	  <ul>
+      </div>
+    </div>
+    </footer>
+  <!--End footer stuff-->
+
   <%= javascript_include_tag "foundation/vendor/jquery", "foundation/vendor/what-input", "foundation/vendor/foundation", "foundation/app" %>
   <script>
     $(document).foundation();
