--- a/app/assets/stylesheets/foundation/foundation.css
+++ b/app/assets/stylesheets/foundation/foundation.css
@@ -1321,7 +1321,7 @@ a {
   line-height: inherit;
   cursor: pointer; }
   a:hover, a:focus {
-    color: #1585cf; }
+    color: #085608; }
   a img {
     border: 0; }
 
