--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -38,8 +38,10 @@
 
 
   
-  <div class="content-yield">
-		<%= yield %>
+  <div class="content-yield row">
+    <div class="small-12 columns">
+      <%= yield %>
+    </div>
   </div>
 
     <!--Footer stuff below-->
