--- a/db/cms_fixtures/paly-alumni/layouts/about-us/content.html
+++ b/db/cms_fixtures/paly-alumni/layouts/about-us/content.html
@@ -4,20 +4,20 @@
     <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
       <ul class="orbit-container">
     	<button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
-    	<button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
-        
-    	{{ cms:page:images:rich_text }}
-        
-  	</ul>
-  	<nav class="orbit-bullets">
-  	</nav>
+    	<button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>  
+  	  </ul>
+  	  <nav class="orbit-bullets">
+  	  </nav>
 	</div>
-    </div>
   </div>
-
+</div>
 
 <!--End orbit from Foundation 3-->
 
+<!--Temp image placement-->
+<span class="imagetemp">
+	{{ cms:page:images:rich_text }}
+</span>
 
 <div class="row">
   <div class="large-12 column">
@@ -28,9 +28,12 @@
   </div>
 </div>
 
-<script type="text/javascript">
+<!--<%= javascript_include_tag "orbitgenerator" %>-->
+
+<!--<script type="text/javascript">
   var wrapper = document.getElementsByClassName("orbit-container")[0];
-  var images = wrapper.getElementsByTagName("img");
+  var imagetemp = document.getElementsByClassName("imagetemp")[0];
+  var images = imagetemp.getElementsByTagName("img");
   var bullets = document.getElementsByClassName("orbit-bullets")[0];
   var innerHTMLs = [];
   
@@ -40,23 +43,21 @@
     innerHTMLs.push("<li class='is-active orbit-slide'>" + images[i].outerHTML + "</li>");
   }
   
-  while (wrapper.hasChildNodes()) {
-    wrapper.removeChild(wrapper.lastChild);
+  while (imagetemp.hasChildNodes()) {
+    imagetemp.removeChild(imagetemp.lastChild);
   }
-
-  wrapper.innerHTML += "<button class='orbit-previous'><span class='show-for-sr'>Previous Slide</span>&#9664;&#xFE0E;</button><button class='orbit-next'><span class='show-for-sr'>Next Slide</span>&#9654;&#xFE0E;</button>";
   
-  var hasActive = false;
+//  var hasActive = false;
   
   for (var i = 0; i < innerHTMLs.length; i++) {
     console.log(innerHTMLs[i]);
-    if (!hasActive){
-      wrapper.innerHTML += innerHTMLs[i];
-      bullets.innerHTML += "<button class='is-active' data-slide='" + i + "'></button>";
-      hasActive = true;
-    } else {
+//    if (!hasActive){
+//      wrapper.innerHTML += innerHTMLs[i];
+//      bullets.innerHTML += "<button class='is-active' data-slide='" + i + "'></button>";
+//      hasActive = true;
+//    } else {
       wrapper.innerHTML += innerHTMLs[i];
       bullets.innerHTML += "<button data-slide='" + i + "'></button>";
-    }
+//    }
   }
-</script>
+</script>-->
