--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,28 +11,51 @@
   <%= render :partial => "layouts/facebook_js" %>
   <%= render :partial => "layouts/google_analytics_js" %>
   <div class = "row">
-    <h1>Paly Alumni</h1>
-    
-	<!--asdf;aksljf;alksjf;aklsfjdks-->
-	<div class="top-bar">
-	  <div id="responsive-menu">
-	    <div class="top-bar-left">
-	      <ul class="dropdown menu" data-dropdown-menu>
-		<li><a href="/blog/">Home</a></li>
-		<li>
-		  <a href="/about-us">About</a>
-		  <ul class="menu vertical">
-		    <li><a href="/about-us/paly-update">Paly Update</a></li>
-		    <li><a href="/about-us/construction">Construction</a></li>
-		  </ul>
-		</li>
-		<li><a href="/reunions">Reunions</a></li>
-		<li><a href="/donate">Donate</a></li>
-		<li><a href="/contact-us">Contact Us</a></li>
+    <h1 style="float:left;">Paly Alumni</h1>
+    <% unless current_user.blank? %>
+    signed in
+    <% else %>
+    not signed in
+    <% end %>
+    <ul style="float:right;" class="dropdown menu" data-dropdown-menu>
+      <li>
+	<% if user_signed_in? %>
+	<a href="#"><%= current_user.display_name %></a>
+	<ul class="menu">
+	  <li><%= link_to "Profile", users_profile_path %></li>
+	  <li><%= link_to "Settings", edit_user_registration_path %></li>
+	  <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+	<% else %>
+	<a href="#">Guest</a>
+	<ul class="menu">
+	  <li><%= link_to "Sign up", new_user_registration_path %></li>
+	  <li><%= link_to "Login", new_user_session_path %></li>
+	<% end %>
+	</ul>
+      </li>
+    </ul>
+  </div>
+  <!--Nav bar-->
+  <div class="row">
+    <div class="top-bar">
+      <div id="responsive-menu">
+	<div class="top-bar-left">
+	  <ul class="dropdown menu" data-dropdown-menu>
+	    <li><a href="/blog/">Home</a></li>
+	    <li>
+	      <a href="/about-us">About</a>
+	      <ul class="menu vertical">
+		<li><a href="/about-us/paly-update">Paly Update</a></li>
+		<li><a href="/about-us/construction">Construction</a></li>
 	      </ul>
-	    </div>
-	  </div>
-	  </div>
+	    </li>
+	    <li><a href="/reunions">Reunions</a></li>
+	    <li><a href="/donate">Donate</a></li>
+	    <li><a href="/contact-us">Contact Us</a></li>
+	  </ul>
+	</div>
+      </div>
+    </div>
   </div>
 
 
