--- a/app/assets/stylesheets/foundation/foundation.css
+++ b/app/assets/stylesheets/foundation/foundation.css
@@ -295,7 +295,7 @@ input[type="radio"] {
    */
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  height: auto; }
+f  height: auto; }
 
 /**
    * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
@@ -3447,7 +3447,7 @@ table.hover tbody tr:nth-of-type(even):hover {
     width: auto; }
   .top-bar .top-bar-left,
   .top-bar .top-bar-right {
-    width: 100%; }
+    width:100%; }
   @media screen and (min-width: 40em) {
     .top-bar .top-bar-left,
     .top-bar .top-bar-right {
