--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -4,21 +4,44 @@
 body {
 	background: #white;
 	color:black; 
-	font-family: Arial;
+	font-family: Helvetica, Arial;
 	font-size: 16px;
 	padding:0px;
 	margin:0px;
+
+	h1 {
+	   font-family: Helvetica;
+	}
 
 	input {
 		font-size: 16px;
 	}
 
-	a {
-		color: #000;
+	.top-bar {
+		 padding: 0;
+		 color: #f5f5f5;
+		 background-color: #000;
+	}
+
+	.top-bar a {
+		/*color: #000;*/
+		background-color: #000;
+		color: #f5f5f5;
+		padding: 1rem;
+		
+	}
+
+	.top-bar ul {
+		background-color: #000;
+		color: #f5f5f5; 
+	}	
+	
+	.top-bar a:hover {
+		 background-color: #085608;
 	}
 
 	div.top-bar a:hover {
-		color: #085608;
+		background-color: #085608;
 	}
 	
 	div.content-yield {
