remove application.js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,7 +97,7 @@
     </div>
     </footer>
   <!--End footer-->
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<!--  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>-->
   <%= javascript_include_tag "foundation/vendor/jquery", "foundation/vendor/what-input", "foundation/vendor/foundation", "foundation/app" %>
   <script>
     $(document).foundation();
