--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 	<ul class="menu">
 	  <li><%= link_to "Profile", users_profile_path %></li>
 	  <li><%= link_to "Settings", edit_user_registration_path %></li>
-	  <li><%= link_to "Logout", destroy_user_session_path, method: => :delete %></li>
+	  <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
 	<% else %>
 	<a href="#">Guest</a>
 	<ul class="menu">
