fix header floating

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <!--Header-->
   <div class ="row" style="padding: 15px">
     <%=image_tag("vikinglogo_md.png")%>
-    <h1 style="vertical-align:middle; display:inline; float:left;">Paly Alumni</h1>
+    <h1 style="vertical-align:middle; display:inline;">Paly Alumni</h1>
     <ul style="float:right;" class="dropdown menu" data-dropdown-menu>
       <li>
 	<% if user_signed_in? %>
