--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,10 +50,10 @@
 	  <ul class="dropdown menu" data-dropdown-menu>
             <li><a href="/blog/">Home</a></li>
 	    <li>
-              <a href="/about-us/">About</a>
+              <a href="/about-us/">About Us</a>
               <ul class="menu vertical">
-		<li><a href="/about-us/paly-update">Paly Update</a></li>
-		<li><a href="/about-us/construction">Construction</a></li>
+		<li><a href="/about-us/paly-update">Class Info</a></li>
+		<li><a href="/about-us/construction">Campus Update</a></li>
               </ul>
             </li>
             <li><a href="/reunions">Reunions</a></li>
