--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,7 +13,7 @@ body {
 	margin:0px;
 
 	h1 {
-	   font-family: Arial;
+		font-family: Helvetica;
 	}
 
 	input {
@@ -21,9 +21,9 @@ body {
 	}
 
 	.top-bar {
-		 padding: 0;
-		 color: #f5f5f5;
-		 background-color: #000;
+		padding: 0;
+		color: #f5f5f5;
+		background-color: #000;
 	}
 
 	.top-bar a {
@@ -40,11 +40,39 @@ body {
 	}	
 	
 	.top-bar a:hover {
-		 background-color: #085608;
+		background-color: #085608;
 	}
 
 	div.top-bar a:hover {
 		background-color: #085608;
+	}
+
+	div.flash-bar {
+		background: #ffa;
+		margin: 5px 20px 5px 20px;
+		padding: 1px 0px 1px 0px;
+		text-align: center;
+		font-family: Arial;
+		font-size: 14px;
+		color: black;
+		p.alert {
+			color: red;
+			text-emphasis: bold;
+		}
+		div.hide-flash-bar {
+			height: 0px;
+			overflow: display;
+			text-align: right;
+			position: relative;
+			top: -42px;
+			margin: 0px 3px 0px 0px;
+			a#hide-flash-bar-x {
+				color: #555;
+				font-size: 16px;
+				text-emphasis: bold;
+				text-decoration: none;
+			}
+		}
 	}
 	
 	div.content-yield {
