--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,8 @@
   </div>
   <!--End Navbar-->
 
+  <!--Flash bar-->
+  <%= render :partial => "layouts/flash_bar" %>
 
   <div class="row"> 
     <div class="content-yield">
