Blog to Announcements?

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,8 @@
 	  <ul class="dropdown menu" data-dropdown-menu>
             <li><a href="/blog/">Home</a></li>
 	    <li><a href="/about-us/">About Us</a></li>
-	    <li><a href="/about-us/paly-update">Class Info</a></li>
-	    <li><a href="/about-us/construction">Campus Update</a></li>
+	    <li><a href="/class-info">Class Info</a></li>
+	    <li><a href="/campus-update">Campus Update</a></li>
             <li><a href="/reunions">Reunions</a></li>
             <li><a href="/donate">Donate</a></li>
 	    <li><a href="/contact-us">Contact Us</a></li>
