Changed navbar and added school photo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,8 +49,9 @@
 	<div class="top-bar-left stacked-for-small">
 	  <ul class="dropdown menu" data-dropdown-menu>
             <li><a href="/blog/">Home</a></li>
-	    <li><a href="/about-us/">About Us</a></li>
+	    <li><a href="/about-us">About Us</a></li>
 	    <li><a href="/class-info">Class Info</a></li>
+	    <li><a href="/class-contacts">Class Contacts</a></li>
 	    <li><a href="/campus-update">Campus Update</a></li>
             <li><a href="/reunions">Reunions</a></li>
             <li><a href="/donate">Donate</a></li>
